# QSBench-Generator

./: .coverage  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  generate.py  pyproject.toml  requirements.txt  roadmap.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  documentation-improvement.md  feature-request.md  new-circuit-family.md  new-dataset-release.md  new-noise-model.md
.github/workflows/: test.yml
RFCs/: rfc_phase_1.md
generator/: config.py  estimation.py  generation.py  generator.py  metrics.py  noise.py
qsbench/: __init__.py  config.py  estimation.py  exceptions.py  generation.py  generator.py  metrics.py  noise.py  reporting.py  storage.py  utils.py
qsbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qsbench/circuit/: __init__.py
qsbench/noise/: __init__.py  core.py
qsbench/storage/: __init__.py  parquet.py
qsbench/utils/: __init__.py  common.py
tests/: __init__.py  conftest.py  test_config.py  test_estimation.py  test_generation.py  test_generator_integration.py  test_metrics.py  test_noise.py  test_reporting.py  test_storage.py  test_utils.py
