[build-system]
requires = ["setuptools>=82", "wheel", "setuptools_scm[toml]>=10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qsbench"
version = "5.2.0"
description = "QSBench — Synthetic quantum dataset generator for QML benchmarking"
authors = [
    {name = "Nikolai Iankovich", email = "qsbench@gmail.com"},
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "qiskit>=1.2,<2.0",
    "qiskit-aer>=0.15.1,<0.18",
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=23",
    "tqdm>=4.67",
    "rich>=14.3",
]

[project.optional-dependencies]
gpu = [
    "qiskit-aer-gpu>=0.15.1",
    "qiskit-aer-gpu-cu11>=0.15.1 ; python_version < '3.13'",
]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "ruff>=0.15",
    "black>=26.3",
    "mypy>=1.20",
    "isort>=8.0",
    "pre-commit>=4.5",
]

[project.scripts]
qsbench = "qsbench.generate:main"

[tool.setuptools]
packages = ["qsbench"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "--cov=qsbench --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:The property .*condition.* is deprecated",
    "ignore:The class .*QFT.* is pending deprecation",
    "ignore:The class .*RealAmplitudes.* is pending deprecation",
    "ignore:The class .*TwoLocal.* is pending deprecation",
    "ignore:The class .*NLocal.* is pending deprecation",
]